<resources>
    <string name="app_name">BlendIT-Test</string>
    <string name="registrar_usuario">Registrar Usuário</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="registrar">Registrar</string>
    <string name="cep">CEP</string>
    <string name="pesquisar_cep">Pesquisar CEP</string>
    <string name="fill_spaces">Preencha todos campos corretamente</string>
    <string name="fillCEP">Preencha corretamente o CEP</string>
    <string name="CEPsize">O CEP deve conter precisamente 8 digitos sem espaços</string>
    <string name="RegSuc">Cadastro Realizado Com Sucesso!</string>
    <string name="regUsers">Usuários Cadastrados.</string>
    <string name="userListing">Consultar Usuário</string>
    <string name="cadastro_usuarios">Cadastro de Usuários</string>
    <string name="updateUser">Atualizar Cadastro</string>
    <string name="updateSuc">Cadastro Atualizado Com Sucesso!</string>
    <string name="update">Atualizar</string>
</resources>